--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Tesla_title" />
+    <link rel="icon" type="image/svg+xml" href="/public/Tesla_title.svg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tesla Clone(UI)</title>
   </head>
